--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -62,7 +62,7 @@
               <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link a" href="#">My orders</a>
+              <a class="nav-link a" href="{% url 'profile' %}">My orders</a>
             </li>
           </ul>
         </div>
