--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -30,8 +30,9 @@
               Phone number : {{profile.phonenumber}}
             </p>
             <p class="text-muted mb-2" style="text-align: center">
-              Qlic Alias :
+              Cliq Alias :
             </p>
+            <a href="edit/" class="btn btn-primary">Edit Profile</a>
           </div>
         </div>
         <div class="col-md-6">
