--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -21,6 +21,16 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}" />
+    <style>
+      .search-input {
+        background: transparent;
+        border: none;
+        border-bottom: 1px solid #fff;
+        border-radius: 0;
+        outline: none;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <nav
@@ -55,15 +65,34 @@
           <span class="visually-hidden">Toggle navigation</span
           ><span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navcol-1">
+          <form method="get" action="{% url 'product:product_list' %}">
+            <div class="input-group w-100">
+                <input type="text" class="form-control" name="title" placeholder="What are you looking for ?">
+                <button class="btn btn-primary" type="submit"><svg class="bi bi-search" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 28px;">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+              </svg></button>
+            </div>
+        </form>
           <ul class="navbar-nav mx-auto"></ul>
+        
+
+        
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" href="#">Home</a>
             </li>
+            {% if request.user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link a" href="/accounts/profile">My orders</a>
+              <a class="nav-link a" href="{% url 'accounts:profile' %}">My orders</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link a" href="{% url 'login' %}">Login</a>
+            </li>
+            {% endif %}
+
           </ul>
         </div>
         <button class="btn btn-primary" type="button">Cart <svg class="bi bi-cart3" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 18px;">
