--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -29,7 +29,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="/"
+        <a class="navbar-brand d-flex align-items-center" href="{% url 'products:product_list' %}"
           ><span
             class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"
             ><svg
