--- a/products/templates/products/cart_page.html
+++ b/products/templates/products/cart_page.html
@@ -143,155 +143,12 @@
                                                     <path fill="#009cde" d="M 95.337 3.3 L 92.137 23.6 C 92.037 24 92.337 24.3 92.737 24.3 L 95.937 24.3 C 96.437 24.3 96.937 23.9 97.037 23.4 L 100.237 3.5 C 100.337 3.1 100.037 2.8 99.637 2.8 L 96.037 2.8 C 95.637 2.8 95.437 3 95.337 3.3 Z"></path>
                                                 </svg></div>
                                         </div>
-                                        <div class="ref-button ref-standard-checkout-button">Checkout</div>
+                                        
+                                        <a class="ref-button ref-standard-checkout-button" href="{% url 'products:checkout' %}">Checkout</a>
+
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="ref-checkout" style="display: none;">
-                            <div class="ref-checkout-content">
-                                <form class="ref-details">
-                                    <div class="ref-back">← Back to Cart</div>
-                                    <div class="ref-heading">Customer Details</div>
-                                    <div class="text-center ref-auth-button-holder">
-                                        <div class="ref-auth-button" data-reflow-type="auth-button">
-                                            <div class="reflow-auth-button">
-                                                <div class="ref-auth-button-guest">
-                                                    <div class="ref-button ref-sign-in">Sign In</div>
-                                                    <div class="ref-register">Don&#39;t have an account? <span class="text-primary">Register<span></span></span></div>
-                                                </div>
-                                                <div class="ref-auth-button-signed"><a class="ref-profile-info"></a>
-                                                    <div class="ref-button ref-sign-out">Sign Out</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><label><span>Email</span><input id="ref-field-email" class="ref-form-control" type="email" name="email" value required data-state-src="email" />
-                                        <div class="ref-validation-error"></div>
-                                    </label><label class="ref-phone-input"><span>Phone</span><input id="ref-field-phone" class="ref-form-control" type="tel" name="phone" value pattern="[0-9\+\- ]{5,30}" placeholder="+1234567890" required data-state-src="phone" />
-                                        <div class="ref-validation-error"></div>
-                                    </label><label class="ref-customer-name-input"><span>Name</span><input class="ref-form-control" type="text" name="customer-name" value data-state-src="customer-name" minlength="5" required />
-                                        <div class="ref-validation-error"></div>
-                                    </label>
-                                    <fieldset class="ref-digital-delivery" disabled>
-                                        <div class="ref-digital-address-holder"></div><input type="hidden" name="delivery-method" value="digital" />
-                                    </fieldset>
-                                    <div class="ref-heading ref-heading-delivery">Delivery</div>
-                                    <div class="ref-delivery-unavailable"></div>
-                                    <div class="ref-delivery-card">
-                                        <div class="ref-tab ref-local-pickup-tab" data-ref-delivery="pickup"><label class="ref-tab-toggle"><input type="radio" value="pickup" name="delivery-method" required />
-                                                <div class="ref-heading-small">Pickup at Store</div>
-                                            </label>
-                                            <fieldset class="ref-tab-content">
-                                                <div class="ref-heading-small">Select a Store</div>
-                                                <div class="ref-locations ref-error-parent"></div>
-                                                <div class="ref-billing-container">
-                                                    <div class="ref-button ref-add-billing">Add Billing Info</div>
-                                                    <fieldset class="ref-billing-address" disabled>
-                                                        <div class="ref-row">
-                                                            <div class="ref-heading-small">Billing Address</div>
-                                                            <div class="ref-button ref-remove-billing">Remove</div>
-                                                        </div>
-                                                        <div class="ref-billing-address-holder"></div>
-                                                    </fieldset>
-                                                </div>
-                                            </fieldset>
-                                        </div>
-                                        <div class="ref-tab ref-shipping-tab" data-ref-delivery="shipping"><label class="ref-tab-toggle"><input type="radio" value="shipping" name="delivery-method" required />
-                                                <div class="ref-heading-small">Deliver to Address</div>
-                                            </label>
-                                            <fieldset class="ref-tab-content">
-                                                <div class="ref-heading-small">Shipping Address</div>
-                                                <div class="ref-shipping-address-holder"></div>
-                                                <div class="ref-auth-save-address"><label><input type="checkbox" name="auth-save-address" checked /><span>Save my address for future purchases</span></label></div>
-                                                <div class="ref-billing-container">
-                                                    <div class="ref-button ref-add-billing">Add Billing Info</div>
-                                                    <fieldset class="ref-billing-address" disabled>
-                                                        <div class="ref-row">
-                                                            <div class="ref-heading-small">Billing Address</div>
-                                                            <div class="ref-button ref-remove-billing">Remove</div>
-                                                        </div>
-                                                        <div class="ref-billing-address-holder"></div>
-                                                    </fieldset>
-                                                </div>
-                                                <div class="ref-heading-shipping-methods ref-heading-small">Shipping Method</div>
-                                                <div class="ref-shipping-methods ref-error-parent"></div>
-                                            </fieldset>
-                                        </div>
-                                    </div>
-                                    <div class="ref-tax-note">
-                                        <hr />
-                                        <div class="ref-field-collapsible open"><span class="ref-field-toggle"><span class="ref-field-toggle-title">Apply a Tax Exemption</span></span>
-                                            <div class="ref-collapse">
-                                                <div class="ref-tax-exemption-file">
-                                                    <div class="ref-old-tax-file"><a class="ref-tax-file-dl" href="#">Tax Exemption File</a><span class="ref-remove-tax-file">Remove</span></div><label class="ref-new-tax-file"><span class="ref-tax-file-label">Attach a document or photo of your tax exemption</span><input id="ref-field-exemption-file" class="ref-form-control" type="file" name="tax-exemption-file" accept=".doc,.docx,.pdf,.jpg,.jpeg,.png" />
-                                                        <div class="ref-validation-error"></div>
-                                                    </label>
-                                                </div><label class="ref-tax-exemption-text"><span>Enter your EU VAT number</span><input id="ref-field-exemption-text" class="ref-form-control" type="text" name="tax-exemption-text" maxlength="30" />
-                                                    <div class="ref-validation-error"></div>
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <div class="ref-field-collapsible ref-note-to-seller open"><span class="ref-field-toggle"><span class="ref-field-toggle-title">Note to Seller</span></span><label class="ref-collapse"><textarea id="ref-field-note-seller" class="ref-form-control" name="note-to-seller" row="4" maxlength="1000" placeholder="If you have any specific instructions you want to give to the seller, write them here." data-state-src="note"></textarea></label>
-                                        <div class="ref-validation-error"></div>
-                                    </div>
-                                    <hr />
-                                    <div>
-                                        <div class="ref-heading ref-heading-payment">Payment</div>
-                                        <div class="ref-paypal-payment-holder"></div>
-                                        <div class="ref-standard-payment-buttons"></div>
-                                    </div>
-                                </form>
-                                <div class="ref-instructions">
-                                    <div class="ref-heading ref-payment-method-name"></div>
-                                    <div class="ref-payment-method-instructions"></div>
-                                </div>
-                                <div class="ref-links"></div>
-                            </div>
-                            <div class="ref-checkout-summary">
-                                <div class="ref-heading">Order Summary</div>
-                                <div class="ref-products"></div>
-                                <hr />
-                                <div class="ref-discount-code">
-                                    <div class="ref-discount-code-container">
-                                        <div class="ref-discount-code-input-holder"><input id="ref-discount-code-input" class="ref-form-control" name="discount-code" type="text" maxlength="32" autocomplete="off" placeholder="Enter coupon or gift card code" /><span class="ref-discount-code-input-clear" title="Clear">✕</span></div>
-                                        <div class="ref-button ref-button-success ref-add-code inactive">Apply</div>
-                                    </div>
-                                    <div class="ref-validation-error"></div>
-                                </div>
-                                <hr />
-                                <div class="ref-totals">
-                                    <div class="ref-subtotal">
-                                        <div class="ref-row"><span>Subtotal</span><span></span></div>
-                                    </div>
-                                    <div class="ref-applied-coupon">
-                                        <div class="ref-row">
-                                            <div class="ref-row"><span></span><span class="ref-remove-coupon">Remove</span></div><span></span>
-                                        </div>
-                                        <div class="ref-applied-coupon-error"></div>
-                                    </div>
-                                    <div class="ref-shipping">
-                                        <div class="ref-row"><span>Shipping</span><span></span></div>
-                                    </div>
-                                    <div class="ref-taxes">
-                                        <div class="ref-row"><span></span><span></span></div>
-                                    </div>
-                                    <div class="ref-applied-gift-card">
-                                        <div class="ref-row">
-                                            <div class="ref-row"><span></span><span class="ref-remove-gift-card">Remove</span></div><span></span>
-                                        </div>
-                                        <div class="ref-row"></div>
-                                        <div class="ref-applied-gift-card-error"></div>
-                                    </div>
-                                </div>
-                                <hr />
-                                <div class="ref-total">
-                                    <div class="ref-row"><span>Total</span><span></span></div>
-                                    <div class="ref-total-note"></div>
-                                </div>
-                            </div>
-                            <div class="ref-summary-toggle ref-field-collapsible"><span class="ref-field-toggle"><span class="ref-field-toggle-title">Show Summary</span><span class="ref-summary-total"></span></span></div>
                         </div>
                     </div>
                 </div>
