--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -21,7 +21,17 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}" />
+      <style>
+        .card1 {
+          border-bottom-left-radius: 2em;
+          margin: 0 auto;
+          border-bottom-right-radius: 2em;
+          border-top-left-radius: 2em;
+          box-shadow: 0 0 10px rgba(0,0,0,.2);
+          border-top-right-radius: 2em;
+        }
 
+      </style>
   </head>
   <body>
     <nav
