--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -108,5 +108,6 @@
     {% endblock content %}
     {% include "footer.html" %}
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
