--- a/accounts/templates/accounts/profile_edit.html
+++ b/accounts/templates/accounts/profile_edit.html
@@ -1,5 +1,5 @@
 {% extends "base_generic.html" %}
-{% block title %}Signup - Modder Games{% endblock %}
+{% block title %}Edit Profile - Modder Games{% endblock %}
 
 {% block content %}
 
@@ -8,8 +8,7 @@
     <div class="container py-5">
       <div class="row mb-4 mb-lg-5">
         <div class="col-md-8 col-xl-6 text-center mx-auto">
-          <p class="fw-bold text-success mb-2">Sign Up</p>
-          <h2 class="fw-bold">Welcome</h2>
+          <h2 class="fw-bold text-success mb-2">Edit Profile</h2>
         </div>
       </div>
       <div class="row d-flex justify-content-center">
