--- a/products/templates/products/cart_page.html
+++ b/products/templates/products/cart_page.html
@@ -79,7 +79,7 @@
                                       <div class="ref-quantity-container" data-reflow-product="{{ item.product.id }}" data-reflow-max-qty="999" data-reflow-quantity="{{ item.quantity }}">
                                         <div class="ref-quantity-widget">
                                           <div class="ref-decrease"><span></span></div>
-                                          <input type="text" value="{{ item.quantity }}">
+                                          <input type="text" style="width: 2.9em;" value="{{ item.quantity }}">
                                           <div class="ref-increase"><span></span></div>
                                         </div>
                                       </div>
