--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -24,7 +24,7 @@
                                       
                                         <div class="ref-quantity-widget">
                                           <div class="ref-decrease"><span></span></div>
-                                          <input type="text" name="quantity" value="1" />
+                                          <input  type="text" name="quantity" style="width: 2.9em;" value="1" />
                                           <div class="ref-increase"><span></span></div>
                                         </div>
                                       
