--- a/products/templates/products/sendm.html
+++ b/products/templates/products/sendm.html
@@ -50,7 +50,7 @@
                     
                 </div>
 
-                <a class="btn btn-primary" href="{% url 'products:sendm' %}?send_data=1">Submit</a>
+                <a class="btn btn-primary" href="{% url 'products:checkout' %}?send_data=1">Submit</a>
 
 
           <br>
