--- a/products/templates/products/order.html
+++ b/products/templates/products/order.html
@@ -30,7 +30,7 @@
                         <div class="mb-3">
                           <h3>Games</h3>
                           {% for i in order_items %}
-                          <h5 class="fw-bold text-success mb-2" style="text-align: left;">
+                          <h5 class="fw-bold text-success mb-2" style="text-align: center;">
                               {{i.product}}</h5>
                           {% endfor %}
                       </div>
