--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -12,11 +12,15 @@
                   <h2 class="ref-name">{{game.title}}</h2>
                   <div class="ref-categories"><span class="ref-category">{{game.category}}</span></div><strong class="ref-price ref-on-sale">{{game.price}} JD</strong><span data-reflow-type="add-to-cart" data-reflow-shoppingcart-url="shopping-cart.html" data-reflow-addtocart-text data-reflow-product="589605485" data-reflow-variant="199976733_s">
                       <div class="reflow-add-to-cart ref-product-controls">
-                          <div class="ref-variant"><label><span>Size</span><select class="ref-form-control ref-field-variants" name="variant-state" required>
-                                      <option value="199976733_s">S</option>
-                                      <option value="199976733_m">M</option>
-                                      <option value="199976733_l" disabled>L</option>
-                                  </select></label></div><span data-reflow-variant="199976733_s" data-reflow-product="589605485" data-reflow-max-qty="999" data-reflow-quantity="1">
+                        <div class="ref-variant">
+                          <label>
+                              <span>Size</span>
+                              <select class="ref-form-control ref-field-variants" name="variant-state" required>
+
+                              </select>
+                          </label>
+                      </div>
+                      <span data-reflow-variant="199976733_s" data-reflow-product="589605485" data-reflow-max-qty="999" data-reflow-quantity="1">
 
                                     <form method="post" action="{% url 'products:add_to_cart' %}">
                                         {% csrf_token %}
