--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -17,7 +17,7 @@
                         {% for h in hgame %}
                             <li>
                                 <a href="/product/{{h.slug}}">
-                                    {{ h.title }}
+                                    {{ h.edition }}
                                 </a>
                             </li>
                         {% endfor %}
