--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}" />
+    
       <style>
         .card1 {
           border-bottom-left-radius: 2em;
@@ -67,7 +68,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'products:product_list' %}"
+        <a class="navbar-brand d-flex align-items-center" href="{% url 'home:homepage' %}"
           ><span
             class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"
             ><svg
@@ -96,7 +97,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navcol-1">
-          <form method="get" action="{% url 'product:product_list' %}">
+          <form method="get" action="{% url 'product:search' %}">
             <div class="input-group w-100">
                 <input type="text" class="form-control" name="title" placeholder="What are you looking for ?">
                 <button class="btn btn-primary" type="submit"><svg class="bi bi-search" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 28px;">
@@ -110,7 +111,10 @@
         
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="{% url 'home:homepage' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'product:product_list' %}">Games</a>
             </li>
             {% if request.user.is_authenticated %}
             <li class="nav-item">
